--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="h6 text-white text-decoration-none" href="#">CONTACT</a>
                 </div>
                 <div class="d-flex align-items-center d-sm-none">
-                    <div class="text-white border border-1 border-white rounded-1 p-1">
+                    <div class="text-secondary border border-1 border-secondary rounded-1 px-2 py-1">
                         <i class="fa-sharp fa-solid fa-bars"></i>
                     </div>
                 </div>
