--- a/index.html
+++ b/index.html
@@ -56,27 +56,59 @@
             </div>
         </div>
     </section>
+
+            <!-- portfolio -->
+
     <section>
         <div class="container">
             <h3 class="text-center">PORTFOLIO</h3>
             <div class="row justify-content-center align-items-center ">
-                <div class="col-6 row justify-content-center align-items-center mb-3">
-                    <div class="line-star col-4 col-md-3 col-lg-2"></div>
-                    <div class="color-darkblue col-auto"><i class="fa-solid fa-star"></i></div>
-                    <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                <div class="col-6 ">
+                    <div class="row justify-content-center align-items-center mb-3">
+                        <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                        <div class="color-darkblue col-auto"><i class="fa-solid fa-star"></i></div>
+                        <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                    </div>   
                 </div>
             </div>
             <div class="row flex-wrap g-3 g-lg-4">
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/cabin.png" alt="baita in montagna"></div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/cake.png" alt="cheesecake"></div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/circus.png" alt="circo"></div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/game.png" alt="pad"></div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/safe.png" alt="cassaforte"></div>
-                <div class="col-sm-12 col-md-6 col-lg-4"> <img src="img/submarine.png" alt="sottomarino"></div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/cabin.png" alt="baita in montagna">
+                    </div>
+                </div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/cake.png" alt="cheesecake">
+                    </div>
+                </div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/circus.png" alt="circo">
+                    </div>
+                </div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/game.png" alt="pad">
+                    </div>
+                </div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/safe.png" alt="cassaforte">
+                    </div>
+                </div>
+                <div class=" col-md-6 col-lg-4"> 
+                    <div>
+                        <img src="img/submarine.png" alt="sottomarino">
+                    </div>
+                </div>
             </div>
         </div>
         
     </section>
+
+                <!-- about -->
+
     <section class="bg-green">
         <div class="container">
             <h3 class="text-center text-white mb-3">ABOUT</h3>
@@ -90,24 +122,28 @@
 
             <div class="row g-md-3 justify-content-center">
                 <div class="col-7 col-md-4">
-                    <p class="text-white">Freelancer is a free
-                        bootstraptheme created by Start Bootstrap.
-                        The download includes the
-                        complete source files including
-                        HTML, CSS, and JavaScript as well
-                        as optional LESS stylesheets for
-                        easy customization.
-                    </p>
+                    <div>
+                        <p class="text-white">Freelancer is a free
+                            bootstraptheme created by Start Bootstrap.
+                            The download includes the
+                            complete source files including
+                            HTML, CSS, and JavaScript as well
+                            as optional LESS stylesheets for
+                            easy customization.
+                        </p>
+                    </div>
                 </div>
                 <div class="col-7 col-md-4">
-                    <p class="text-white text-start">
-                        Whether you're a student looking to
-                        showcase your work, a professional
-                        looking to attract clients, or a
-                        graphic artist looking to share your
-                        projects, this template is the perfect
-                        starting point!
-                    </p>
+                    <div>
+                        <p class="text-white text-start">
+                            Whether you're a student looking to
+                            showcase your work, a professional
+                            looking to attract clients, or a
+                            graphic artist looking to share your
+                            projects, this template is the perfect
+                            starting point!
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
@@ -115,27 +151,37 @@
             </div>
         </div>
     </section>
+
+                <!-- contact me  -->
+
     <section>
         <div class="container">
             <h3 class="text-center mb-3">Contact me</h3>
             <div class="row justify-content-center align-items-center ">
-                <div class="col-6 row justify-content-center align-items-center mb-3">
-                    <div class="line-star col-4 col-md-3 col-lg-2"></div>
-                    <div class="color-darkblue col-auto"><i class="fa-solid fa-star"></i></div>
-                    <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                <div class="col-6 ">
+                    <div class="row justify-content-center align-items-center mb-3">
+                        <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                        <div class="color-darkblue col-auto"><i class="fa-solid fa-star"></i></div>
+                        <div class="line-star col-4 col-md-3 col-lg-2"></div>
+                    </div>
                 </div>
             </div>
             <div class="w-75 m-auto">
-                <ul class="list-group list-group-flush fw-semibold ">
-                    <li class="list-group-item">Name</li>
-                    <li class="list-group-item">Email Address</li>
-                    <li class="list-group-item">Phone Number</li>
-                    <li class="list-group-item mt-2 message">Message</li>
-                    <li class="list-group-item"></li>
-                </ul>
-                <button type="button" class="btn bg-green text-white ms-3 fw-semibold">Send</button>
+                <div>
+                    <ul class="list-group list-group-flush fw-semibold ">
+                        <li class="list-group-item">Name</li>
+                        <li class="list-group-item">Email Address</li>
+                        <li class="list-group-item">Phone Number</li>
+                        <li class="list-group-item mt-2 message">Message</li>
+                        <li class="list-group-item"></li>
+                    </ul>
+                </div>
+                <button type="button" class="my-button text-white ms-3 fw-semibold">Send</button>
             </div>
     </section>
+
+                <!--**** location  ****-->
+
     <section class="bg-blue">
         <div class="container text-white">
             <div class="row g-4 flex-wrap justify-content-center m-auto">
