--- a/index.html
+++ b/index.html
@@ -167,16 +167,23 @@
                 </div>
             </div>
             <div class="w-75 m-auto">
-                <div>
-                    <ul class="list-group list-group-flush fw-semibold ">
-                        <li class="list-group-item">Name</li>
-                        <li class="list-group-item">Email Address</li>
-                        <li class="list-group-item">Phone Number</li>
-                        <li class="list-group-item mt-2 message">Message</li>
-                        <li class="list-group-item"></li>
-                    </ul>
+                <div class="form-floating mb-1">
+                    <input type="name" class="form-control" id="floatingInput" placeholder="name">
+                    <label for="floatingInput">Name</label>
                 </div>
-                <button type="button" class="my-button text-white ms-3 fw-semibold">Send</button>
+                <div class="form-floating mb-1">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-1">
+                    <input type="number" class="form-control " id="floatingPhoneNumber" placeholder="Password">
+                    <label for="floatingPassword">Phone Number</label>
+                </div>
+                <div class="form-floating mb-2">
+                    <textarea class="form-control" placeholder="Message" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Message</label>
+                  </div>
+                <button type="button" class="my-button text-white ms-2 fw-semibold">Send</button>
             </div>
     </section>
 
