--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <section>
         <div class="container">
-            <h3 class="text-center mb-3">Contact me</h3>
+            <h3 class="text-center mb-3">CONTACT ME</h3>
             <div class="row justify-content-center align-items-center ">
                 <div class="col-6 ">
                     <div class="row justify-content-center align-items-center mb-3">
