--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                     <a class="h6 text-white text-decoration-none" href="#">CONTACT</a>
                 </div>
                 <div class="d-flex align-items-center d-sm-none">
-                    <div class="text-secondary border border-1 border-secondary rounded-1 px-2 py-1">
+                    <button class="btn btn-light text-secondary">
                         <i class="fa-sharp fa-solid fa-bars"></i>
-                    </div>
+                    </button>
+                        
+                    
                 </div>
 
             </nav>
