--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
             </div>
             <h1 class="text-center text-white">START BOOTSTRAP</h1>
             <div class="row justify-content-center align-items-center ">
-                <div class="col-6 row justify-content-center align-items-center">
-                    <div class="col-4 col-md-3 col-lg-2 border border-1 rounded-4"></div>
-                    <div class="text-white col-auto"><i class="fa-solid fa-star"></i></div>
-                    <div class="col-4 col-md-3 col-lg-2 border border-1 rounded-4"></div>
+                <div class="col-6">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-4 col-md-3 col-lg-2 border border-1 rounded-4"></div>
+                        <div class="text-white col-auto"><i class="fa-solid fa-star"></i></div>
+                        <div class="col-4 col-md-3 col-lg-2 border border-1 rounded-4"></div>
+                    </div>
                 </div>
             </div>
             <div class="text-center h6 pt-2">
@@ -115,10 +117,12 @@
         <div class="container">
             <h3 class="text-center text-white mb-3">ABOUT</h3>
             <div class="row justify-content-center align-items-center mb-2">
-                <div class="col-6 row justify-content-center align-items-center">
-                    <div class="col-1 col-md-2 col-lg-2 border border-1 rounded-4"></div>
-                    <div class="text-white col-auto"><i class="fa-solid fa-star"></i></div>
-                    <div class="col-1 col-md-2 col-lg-2 border border-1 rounded-4"></div>
+                <div class="col-6">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-1 col-md-2 col-lg-2 border border-1 rounded-4"></div>
+                        <div class="text-white col-auto"><i class="fa-solid fa-star"></i></div>
+                        <div class="col-1 col-md-2 col-lg-2 border border-1 rounded-4"></div>
+                    </div> 
                 </div>
             </div>
 
